devops/k8s/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: wanderift-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    certmanager.k8s.io/cluster-issuer: 'letsencrypt-prod'
    certmanager.k8s.io/acme-challenge-type: http01
spec:
  tls:
    - hosts:
        - staging.joinflyline.com
      secretName: wanderift-secret
  rules:
    - host: staging.joinflyline.com
      http:
        paths:
          - path: /
            backend:
              serviceName: wanderift-service
              servicePort: 80
